<resources>
    <string name="app_name">Ex MovieDB</string>
    <string name="btn_hit">Hit API</string>
    <string name="img">img</string>
    <string name="movie_title">Title</string>
    <string name="movie_overview">Overview</string>
    <string name="movie_releasedate">Release Date</string>
    <string name="movie_tagline">Tagline</string>
    <string name="movie_releaseDate">Release Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>